--- a/qtify/package.json
+++ b/qtify/package.json
@@ -10,7 +10,9 @@
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4",
-    "react-router-dom": "^6.26.1"
+    "react-router-dom": "^6.26.1",
+    "@mui/base": "^5.0.0",
+    "@mui/material": "^6.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
