--- a/qtify/package.json
+++ b/qtify/package.json
@@ -11,8 +11,8 @@
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4",
     "react-router-dom": "^6.26.1",
-    "@mui/base": "^5.0.0",
-    "@mui/material": "^5.0.0"
+    "@mui/base": "^5.0.0-beta.40",
+    "@mui/material": "^6.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
