--- a/qtify/package.json
+++ b/qtify/package.json
@@ -12,7 +12,9 @@
     "web-vitals": "^2.1.4",
     "react-router-dom": "^6.26.1",
     "@mui/base": "^5.0.0-beta.40",
-    "@mui/material": "^6.0.1"
+    "@mui/material": "^6.0.1",
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0"
   },
   "scripts": {
     "start": "react-scripts start",
