--- a/qtify/package.json
+++ b/qtify/package.json
@@ -14,7 +14,8 @@
     "@mui/base": "^5.0.0-beta.40",
     "@mui/material": "^6.0.1",
     "@emotion/react": "^11.13.3",
-    "@emotion/styled": "^11.13.0"
+    "@emotion/styled": "^11.13.0",
+    "axios": "^1.7.7"
   },
   "scripts": {
     "start": "react-scripts start",
