--- a/qtify/package.json
+++ b/qtify/package.json
@@ -15,7 +15,8 @@
     "@mui/material": "^6.0.1",
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
-    "axios": "^1.7.7"
+    "axios": "^1.7.7",
+    "swiper": "^12.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
