--- a/qtify/package.json
+++ b/qtify/package.json
@@ -3,20 +3,20 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
+    "@mui/base": "^5.0.0-beta.40",
+    "@mui/material": "^6.0.1",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.7.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4",
     "react-router-dom": "^6.26.1",
-    "@mui/base": "^5.0.0-beta.40",
-    "@mui/material": "^6.0.1",
-    "@emotion/react": "^11.13.3",
-    "@emotion/styled": "^11.13.0",
-    "axios": "^1.7.7",
-    "swiper": "^11.1.12"
+    "react-scripts": "5.0.1",
+    "swiper": "^11.1.12",
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -43,10 +43,10 @@
     ]
   },
   "exports": {
-  ".": "./dist/swiper.esm.js",
-  "./bundle": "./dist/swiper.bundle.js",
-  "./css": "./dist/css",
-  "./react": "./react/swiper-react.js",
-  "./navigation": "./dist/swiper.navigation.js"
-}
+    ".": "./dist/swiper.esm.js",
+    "./bundle": "./dist/swiper.bundle.js",
+    "./css": "./dist/css",
+    "./react": "./react/swiper-react.js",
+    "./navigation": "./dist/swiper.navigation.js"
+  }
 }
