--- a/qtify/package.json
+++ b/qtify/package.json
@@ -16,6 +16,7 @@
     "react-router-dom": "^6.26.1",
     "react-scripts": "5.0.1",
     "bootstrap": "^5.1.3",
+    "react-bootstrap": "^2.6.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
